mule-management-console/v/3.5/persisting-mmc-data-to-mysql.adoc
= Persisting MMC Data to MySQL

#*_MMC Version 3.4.2 and Later_*#

This document will cover how to persist environment and transaction data to MySQL databases. Follow the instructions to link:#PersistingMMCDatatoMySQL-MySQLInstallation[install MySQL], then follow the specific instructions for link:#PersistingMMCDatatoMySQL-PersistingEnvironmentData[environment data] or link:#PersistingMMCDatatoMySQL-PersistingTransactionData[transaction data] persistence to set up your user, create your database, and configure your MMC instance to persist your data. 

[NOTE]
Remember that *environment data and transaction data must exist in two separate databases* (regardless of whether they are on the same server or use the same platform).

*Jump to:*

* *link:#PersistingMMCDatatoMySQL-PersistingEnvironmentData[Persisting Environment Data to MySQL]*
* *link:#PersistingMMCDatatoMySQL-PersistingTransactionData[Persisting Transaction Data to MySQL]*

== Assumptions

This document assumes that you have an understanding of the link:/documentation/display/current/Setting+Up+MMC#SettingUpMMC-DataPersistence[data persistence options] for environment and transaction data and that you are familiar with the basic link:/documentation/display/current/Architecture+of+the+Mule+Management+Console[Architecture of the Mule Management Console]. It also assumes that you have installed:

* *MMC Version 3.5.0*. Download it from the http://www.mulesoft.com/support-login[customer portal] if you need to upgrade to this version.
* *a Web application server such as Tcat, Tomcat, or JBoss*. Please refer to the link:/documentation/display/current/Hardware+and+Software+Requirements[Hardware and Software Requirements] for the latest information about hardware requirements and supported application servers, Java Runtime Environments, and browsers.

For practical purposes, this document mentions Tomcat as the servlet container; however, the instructions contained here apply also to Tcat or JBoss. If you are using Tcat or JBoss, make sure to unpack the Management Console .war file in the appropriate directory. For additional information, see link:/documentation/display/current/Installing+the+Production+Version+of+MMC[Installing the Production Version of MMC].

[NOTE]
====
In this document, `<MMC_HOME>` refers to the directory where MMC is installed.

If you are using the trial version, this directory is inside the root of the embedded Tomcat server from which MMC runs. Depending on where you placed the bundled installation, the path will be similar to `<installation_root>/mmc-distribution-mule-console-bundle-3.5.0/mmc-3.5.0/apache-tomcat-7.0.52/webapps/mmc-3.5.0`.

If you are using a production installation in an application server such as Tomcat, the path should be similar to `<Tomcat root>/webapps/mmc-console-3.50.` For example `/var/lib/tomcat6/webapps/mmc-console-3.5.0`.
====

== MySQL Installation

The MySQL installation outlined here is basic: the database is installed on the local machine on the default port of 3306, with security deactivated (using an unsecured connection to the database, and a user with full admin rights).

=== Tools

* MySQL Community Server (http://dev.mysql.com/downloads/mysql/[Download])
* mysql command-line utility
* phpMyAdmin, a Web-based database administration tool (optional) (http://www.phpmyadmin.net/home_page/downloads.php[Download])

This configuration was tested with MySQL Community Server 5.5.

Creating a database and database user in MySQL is relatively simple. You can perform these tasks either with the  `mysql` command-line utility, or with the `phpMyAdmin` Web-based administration tool. This document does not describe how to set up or install MySQL, or how to create the tables with `phpMyAdmin`; however, it does list the commands to create the database, user, and tables for the environment data persistence example below. See the expandable section in link:#PersistingMMCDatatoMySQL-CreatingtheTables[Creating the Tables] for details.

== Persisting Environment Data

To set up MySQL to persist your MMC environment data, you need to complete these steps:

. link:#PersistingMMCDatatoMySQL-envdb[Create the database].
. link:#PersistingMMCDatatoMySQL-envuser[Create the database user].
. link:#PersistingMMCDatatoMySQL-envtables[Create the tables].
. link:#PersistingMMCDatatoMySQL-envsetup[Set up MMC].
. If your MySQL is on a remote host, perform some link:#PersistingMMCDatatoMySQL-remote[additional configuration].

[NOTE]
====
The embedded database files for the Mule console reside at one of the following directories:

* if on a Web servlet container such as Tomcat:` <MMC_HOME>/mmc-data/db`
* if on a trial version: `<Mule install path>/.mule/mmc/mmc-data/db`

After you configure MMC to use an external database to store its persistent data, do not delete the `mmc-data` folder. The `db` subfolder will not be used anymore, but the `repository`, `version` and `workspaces` subfolders will be in use by Java Content Repository (JCR) internal settings.
====

=== Creating the Database

Create a new database with the following parameters:

* *Database name:* `mmc_persistency_status`
* *Database owner:* `MMC_STATUS`

=== Creating the Database User

Create a new database user with default permissions and the following parameters:

* *Username:* `MMC_STATUS`
* *Password:* `mmc123`

=== Creating the Tables

Navigate to the following directory: `<MMC_HOME>/WEB-INF/classes/quartz`. In this directory you will find two scripts for MySQL:

* `tables_mysql.sql` for MySQL server versions earlier than 4.1
* `tables_mysql_version_4_1_and_above.sql`  for MySQL server versions 4.1 and above

Depending on your MySQL server version, execute the appropriate script in the target database,  `mmc_persistency_status`.

////
[NOTE]
====
 Creating the database, user and tables with the mysql utility

. Open a terminal and run the `mysql` utility with the following command.
. `mysql` prompts you for root's user password. Enter the password, and you should see the following `mysql` prompt.
. Enter the following commands in the order in which they appear below. Each command is terminated by a semicolon (;). When you press Enter after each semicolon, the terminal displays a message that begins with  `Query OK` , which indicates successful completion of the command.
. After you exit  `mysql` , locate the relevant script for MySQL provided with the Management Console (by default at `<MMC_HOME>/WEB-INF/classes/quartz` ). In your terminal, change to the directory containing the script by running the `cd` command. An example command follows.
. From this directory, run  `mysql` again, this time with the parameters shown below.
. After you enter the password, you are logged in to database  `mmc_persistency_status` as user  `MMC_STATUS` .  +
. Run the MySQL script by issuing the following command.
. Depending on your MySQL server version, the script name will be  `tables_mysql.sql` or  `tables_mysql_versions_4_1_and_above.sql` . When you run the script, `mysql` will display a long list of status messages as per the following.
. The status messages listed above indicate that the tables have been successfully created. To verify, issue the following command (below, top), which yields the following output (below, bottom).
.To see the contents of a particular table, run the following command.
The example below includes the command output for table `QRTZ_BLOB_TRIGGERS`:
At this point, you've finished configuring MySQL. You can proceed to set up the Management Console to use the database you've just created.
====
////

=== Setting Up MMC to use MySQL for Persisting Environment Data

This example uses the parameters employed link:#PersistingMMCDatatoMySQL-PersistingEnvironmentData[earlier in this document] when creating the MySQL database.

* MySQL listening host and port: localhost port 3306
* Database name: `mmc_persistency_status`
* Database user: `MMC_STATUS`
* Password: `mmc123`

==== Obtaining MySQL Drivers

. http://dev.mysql.com/downloads/connector/j/5.0.html[Download] the latest MySQL driver. (You need a free Oracle account to download.) The driver is called `mysql-connector-java-<version>`, such as `mysql-connector-java-5.1.26`. You can download the driver as a zip or  tar.gz file.
. Extract the .zip or .tar.gz installation file. In the resulting directory structure, locate the file called `mysql-connector-java-<version>-bin.jar`. This is the jbdc driver itself, that you will copy to the Management Console directory structure.

===== Driver for MMC run as Mule app

Copy the MySQL jdbc driver, `mysql-connector-java-<version>-bin.jar`, to the following directory: `<Mule install path>/apps/mmc/webapps/mmc/WEB-INF/lib`.

Alternatively, make the driver generally available by copying it to: `<Mule install path>/lib/user`.

===== Driver for MMC run as a Web app

Copy the MySQL jdbc driver, `mysql-connector-java-<version>-bin.jar`, to the following directory: `<MMC_HOME>/` WEB-INF/lib.

==== MMC Configuration

Configuring MMC to store data on a MySQL database involves two basic tasks:

* Modifying the file `web.xml` to tell MMC to use MySQL instead of its default database
* Modifying the file `mmc-mysql.properties` to set the parameters for connecting to the MySQL database

===== Modifying `web.xml`

. In the directory `<MMC_HOME>/WEB-INF`, locate the file `web.xml`, then open it for editing.
. Locate the `spring.profiles.active` section, shown below.

[source, xml]
----
<context-param>
<param-name>spring.profiles.active</param-name>
<param-value>tracking-h2,env-derby</param-value>
</context-param>
----

. Delete the string `env-derby`, then replace it with `env-mysql`, as shown below.

[source, xml]
----
<context-param>
<param-name>spring.profiles.active</param-name>
<param-value>tracking-h2,env-mysql</param-value>
</context-param>
----

. If you are also planning to link:#PersistingMMCDatatoMySQL-PersistingTransactionData[persist transaction data] to MySQL, delete the string `tracking-h2` and replace it with `tracking-mysql`.

[TIP]
The `spring.profiles.active` section in the `web.xml` configuration file allows you to define what external databases are used for storing environment and/or tracking data. For a quick instructions for all supported database servers, see http://www.mulesoft.org/documentation/display/current/Copy+of+Configuring+MMC+for+External+Databases+-+Quick+Reference[Configuring MMC for External Databases - Quick Reference].

===== Modifying `mmc-mysql.properties`

. In the directory `<MMC_HOME>/WEB-INF/classes/META-INF/databases`, locate the file `mmc-mysql.properties`, then open it for editing.
. The table below lists the settings contained in the file. Modify the values as needed. In general, the only values that you should need to modify are `env.username`, `env.password`, `env.host`, `env.port` and `env.dbschema`.

[width="99a",cols="33a,33,33a",options="header"]
|===
|Parameter |Description |Default
|`env.driver` |Driver to use for connecting to the database |`com.mysql.jdbc.Driver`
|`env.script` |Script to use for creating the tables in the target database |`mysql`
|`env.username` |Database user |`MMC_STATUS`
|`env.password` |Password for the database user |`mmc123`
|`env.host` |Hostname or IP address where the database server is listening |`localhost`
|`env.port` |Port where the database server is listening |`3306`
|`env.url` |URL for connecting to the database |`jdbc:mysql://${env.host}:${env.port}/${env.dbschema}`
|`env.dbschema` |Database to connect to |`mmc_persistency_status`
|===
. Save the file with your modifications, if any.

=== Removing Local Database Files

For the configuration changes to take effect, before launching MMC you need to delete the local database files that MMC uses by default.

In the root directory of your Web application server, locate the `mmc-data` directory (for example, `/var/lib/tomcat6/mmc-data`), then delete the `mmc-data` directory.

[NOTE]
Before you delete `mmc-data`, make a backup copy of this directory and store it in a safe location. If anything goes wrong with your new database configuration, you can use `mmc-data` to restore the old database configuration while you troubleshoot your new database config in a test environment.

At this point, MMC, is configured to store environment data on the external MySQL database that you specified. 

=== Connecting to a Remote MySQL Server

If the MySQL server resides on a remote host, you are most likely unable to connect, unless you perform the following two actions:

* configure the MySQL server to allow remote database connections
* grant privileges to your database user allowing it to connect remotely

Both actions are described in the following two sections.

==== Remote Database Connections

. To check that the MySQL server allows remote database connections, locate the MySQL server configuration file, for example `/etc/mysql/my.cnf`. 
. Search for the following line.

[source]
----
bind-address        = 127.0.0.1
----

. If the line exists, perform the following steps:

.. 1.  Stop the MySQL server.
.. Open the configuration file for editing, then comment out the line with a number sign (#), as shown below.

[source]
----
# bind-address      = 127.0.0.1
----

.. Close the file, then restart the MySQL server.

==== Remote Access Privileges

. To grant remote database access to your database user, login to MySQL as the MySQL server root user, using the following command.

[source]
----
mysql -u root -D mysql -p
----

. Enter the password for root.
. Obtain the 41-digit hexadecimal representation of the database user's password (in this case, the password for user MMC_STATUS) by running the following command.

[source]
----
SELECT * FROM user WHERE User = '<user>';
----

. In the output from the previous command, find, then copy the 41-digit hex number, which is preceded by an asterisk. Ensure that you save this number to your clipboard or a text file, since you will use it in the next step. A snippet of example output is shown below.

[source]
----
mysql> SELECT * FROM user WHERE User = 'MMC_STATUS';
+--------------+------------+-------------------------------------------+-------------+-------------+-------------+-------------+-------------+-----------+-------------+---------------+--------------+-----------+------------+-----------------+------------+------------+--------------+------------+-----------------------+------------------+--------------+-----------------+------------------+------------------+----------------+---------------------+--------------------+------------------+------------+--------------+------------------------+----------+------------+-------------+--------------+---------------+-------------+-----------------+----------------------+--------+-----------------------+
| Host         | User       | Password                                  | Select_priv | Insert_priv | Update_priv | Delete_priv | Create_priv | Drop_priv | Reload_priv | Shutdown_priv | Process_priv | File_priv | Grant_priv | References_priv | Index_priv | Alter_priv | Show_db_priv | Super_priv | Create_tmp_table_priv | Lock_tables_priv | Execute_priv | Repl_slave_priv | Repl_client_priv | Create_view_priv | Show_view_priv | Create_routine_priv | Alter_routine_priv | Create_user_priv | Event_priv | Trigger_priv | Create_tablespace_priv | ssl_type | ssl_cipher | x509_issuer | x509_subject | max_questions | max_updates | max_connections | max_user_connections | plugin | authentication_string |
+--------------+------------+-------------------------------------------+-------------+-------------+-------------+-------------+-------------+-----------+-------------+---------------+--------------+-----------+------------+-----------------+------------+------------+--------------+------------+-----------------------+------------------+--------------+-----------------+------------------+------------------+----------------+---------------------+--------------------+------------------+------------+--------------+------------------------+----------+------------+-------------+--------------+---------------+-------------+-----------------+----------------------+--------+-----------------------+
| localhost    | MMC_STATUS | *14695FC49478AC013A63030250DD44DE579D54E1 | N           | N           | N           | N           | N           | N         | N           | N             | N            | N         | N          | N               | N          | N          | N            | N          | N                     | N                | N            |
----

. Grant the privileges with the following command. For the `<password>` parameter, paste the 41-digit hex number you copied in the previous step.

[source]
----
GRANT ALL PRIVILEGES ON <database>.* TO '<user>'@'<host|net>' IDENTIFIED BY PASSWORD '<password>' WITH GRANT OPTION;
----

. Tell the MySQL server to reload the grant tables, with the following command.

[source]
----
FLUSH PRIVILEGES;
----

[NOTE]
====
 Details and usage example for the GRANT ALL PRIVILEGES command

The value of `<host|net>` can either be a host or network specification. Wildcards are allowed, such as `'MMC_STATUS'@'172.16.0.%'`.

The value of `<password>` is the 41-digit hexadecimal number representing the password. To obtain your user's password, run the following command from the `mysql` prompt.

A complete command example follows.
====

[NOTE]
====
 Testing the remote connection with the telnet command

If you are unsure of the MySQL server configuration, _but are certain that you have connectivity to the MySQL server host and port_ (i.e. you are sure there are no routing issues, firewalls, etc. blocking connectivity), then you can use the `telnet` command to do a remote test of the MySQL server.

If the MySQL server is not accepting remote connections, trying to telnet to the MySQL host and port results in a "Connection refused error," even if the server is indeed listening on the specified host and port.

If the MySQL server is accepting remote connections, but there is no user allowed to connect remotely, the output appears similar to the following. In this example, the connection succeeds but is closed by the remote host.

If connectivity to the MySQL server is fully working, and the server is granting user access, the output appears similar to the following.

If you obtain this output, but cannot successfully connect the Management Console to the remote MySQL server, then something is likely wrong with the Management Console configuration. Check the logs in Mule or your Web app server for details.
====

== Persisting Transaction Data

To set up MySQL to persist your MMC transaction data, you need to complete these steps:

. link:#PersistingMMCDatatoMySQL-transactiondb[Create the database].
. link:#PersistingMMCDatatoMySQL-transactionuser[Create the database user].
. link:#PersistingMMCDatatoMySQL-transactionsetup[Set up MMC].
. link:#PersistingMMCDatatoMySQL-ModifyingtheCleanupScriptforMySQL[Modify the cleanup script for MySQL].

=== Creating the Database

Create a new database with the following parameters:

* *Database name:* `event_tracker`
* *Database owner:* `MMC_EVENTS`

=== Creating the Database User

Create a new database user with default permissions and the following parameters:

* *Username:* `MMC_EVENTS`
* *Password:* `mmc123`

=== Setting Up MMC to use MySQL for Persisting Transaction Data

==== Obtaining MySQL Drivers

. http://dev.mysql.com/downloads/connector/j/5.0.html[Download] the latest MySQL driver. (You need a free Oracle account to download.) The driver is called `mysql-connector-java-<version>`, such as `mysql-connector-java-5.1.26`. You can download the driver as a zip or  tar.gz file.
. Extract the zip or tar.gz installation file. In the resulting directory structure, locate the file called `mysql-connector-java-<version>-bin.jar`. This is the jbdc driver itself, that you will copy to the Management Console directory structure.

===== Installing the Driver

Copy the MySQL jdbc driver, `mysql-connector-java-<version>-bin.jar`, to the following directory: `<MMC_HOME>/WEB-INF/lib`.

==== MMC Configuration

Configuring MMC to store Business Events data on a MySQL database involves two basic tasks:

* Modifying the file `web.xml` to tell MMC to use MySQL instead of its default database
* Modifying the file `tracking-persistence-mysql.properties` to set the parameters for connecting to the MySQL database

===== Modifying `web.xml`

. In the directory `<MMC_HOME>/WEB-INF`, locate the file `web.xml`, then open it for editing.
. Locate the `spring.profiles.active` section, shown below.

[source, xml]
----
<context-param>
<param-name>spring.profiles.active</param-name>
<param-value>tracking-h2,env-derby</param-value>
</context-param>
----

. Delete the string `tracking-h2`, then replace it with `tracking-mysql`, as shown below.

[source, xml]
----
<context-param>
<param-name>spring.profiles.active</param-name>
<param-value>tracking-mysql,env-mysql</param-value>
</context-param>
----

. If you are also planning to link:#PersistingMMCDatatoMySQL-PersistingEnvironmentData[persist environment data] to MySQL, delete the string `env-derby` and replace it with `env-mysql`.

[TIP]
The `spring.profiles.active` section in the `web.xml` configuration file allows you to define what external databases are used for storing environment and/or tracking data. For a quick instructions for all supported database servers, see http://www.mulesoft.org/documentation/display/current/Copy+of+Configuring+MMC+for+External+Databases+-+Quick+Reference[Configuring MMC for External Databases - Quick Reference].

==== Modifying `tracking-persistence-mysql.properties`

. In the directory `<MMC_HOME>/WEB-INF/classes/META-INF/databases`, locate the file `tracking-persistence-mysql.properties`, then open it for editing.
. Modify the included settings as needed, according to the table below. In general, the only values that you should need to modify are `mmc.tracking.db.username`, `mmc.tracking.db.password`, `mmc.tracking.db.host`, `mmc.tracking.db.port` and `mmc.tracking.db.dbname`.

[width="99a",cols="33a,33,33a",options="header"]
|===
|Parameter |Description |Default
|`mmc.tracking.db.events.query.propKeys` |*Do not change this value.* This is a DB-engine-specific query to retrieve event keys. |`SELECT DISTINCT t1.KEY0 FROM EVENT_PROPERTIES t1`
|`mmc.tracking.db.platform` |Type of database server to connect to |`mysql`
|`mmc.tracking.db.driver` |Driver to use for connecting to the database |`com.mysql.jdbc.Driver`
|`mmc.tracking.db.host` |Hostname or IP address where the database server is listening |`localhost`
|`mmc.tracking.db.port` |Port where the database server is listening |`3306`
|`mmc.tracking.db.url` |URL for connecting to the database |`jdbc:mysql://${mmc.tracking.db.host}:${mmc.tracking.db.port}/${mmc.tracking.db.dbname}`
|`mmc.tracking.db.username` |Database user |`MMC_EVENTS`
|`mmc.tracking.db.password` |Password for the database user |`mmc123`
|`mmc.tracking.db.dbname` |Database to connect to |`event_tracker`
|`mmc.max.events.exception.details.length` |Number of characters from a Business Events exception that will be stored in the tracking database. The maximum allowed is 261120. |`8000`
|===
. Save the file with your modifications, if any.

=== Removing Local Database Files

For the configuration changes to take effect, before launching MMC you need to delete the local database files that MMC uses by default.

In the root directory of your Web application server, locate the `mmc-data` directory (for example, `/var/lib/tomcat6/mmc-data`), then delete the `mmc-data` directory.

[NOTE]
Before you delete `mmc-data`, make a backup copy of this directory and store it in a safe location. If anything goes wrong with your new database configuration, you can use `mmc-data` to restore the old database configuration while you troubleshoot your new database config in a test environment.

At this point, MMC, is configured to store environment data on the external MySQL database that you specified. 

=== Modifying the Cleanup Script for MySQL

MMC includes a script to perform a routine cleanup of the MMC database, which by default takes place every day at midnight. The current script for MySQL contains a bug which causes MySQL to throw an SQL exception. To avoid this issue, replace the original script with the one provided below, by completing the following steps.

==== New Cleanup Script

// Click for the new cleanup script

==== Replacing the Old Script

. Log in to MMC.
. Go to the *Administration* tab, then *Admin Shell*. You should see the following screen.

image:/documentation/download/attachments/122752002/admin_shell.png?version=1&modificationDate=1400518258970[image]

. Click *Cleanup Tracking DB* in the column to the right. This displays the contents of the script in the editor box, as shown below.

image:/documentation/download/attachments/122752002/admin_shell2.png?version=1&modificationDate=1400518258978[image]

. Now you can edit the script as desired. Delete all of the contents of the script, leaving the editor blank.
. Copy-paste the link:#PersistingMMCDatatoMySQL-NewCleanupScript[new script] into the editor.
. Click *Save As...* under the editor.
. In the input field next to *Save As...*, type `Cleanup Tracking DB` (case sensitive), then click *Save*. This causes the new script to overwrite the old one.

== See Also

* Read more about link:/documentation/display/current/Setting+Up+MMC[MMC setup].
* Review the link:/documentation/display/current/Architecture+of+the+Mule+Management+Console[Architecture of the Mule Management Console].
